@@ -31,6 +31,7 @@ static gboolean ol_player_amarok2_next ();
 static gboolean ol_player_amarok2_seek (int pos_ms);
 static void ol_player_amarok2_ensure_elapse (int elapsed_time);
 static const char *ol_player_amarok2_get_icon_path ();
+static const char *_get_icon_path (void);
 
 static void
 ol_player_amarok2_ensure_elapse (int elapsed_time)
