@@ -1,0 +1,8 @@
+#ifndef _OL_PLAYER_QMMP_H_
+#define _OL_PLAYER_QMMP_H_
+
+#include "ol_player.h"
+
+struct OlPlayer* ol_player_qmmp_get ();
+
+#endif /* _OL_PLAYER_QMMP_H_ */
